CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(knowit)

SET (CMAKE_CXX_STANDARD 14)

ADD_EXECUTABLE(luke1 luke1.cpp)
ADD_EXECUTABLE(luke2 luke2.cpp)
ADD_EXECUTABLE(luke3 luke3.cpp)
ADD_EXECUTABLE(luke4 luke4.cpp)
ADD_EXECUTABLE(luke5 luke5.cpp)
ADD_EXECUTABLE(luke6 luke6.cpp)
ADD_EXECUTABLE(luke7 luke7.cpp)
ADD_EXECUTABLE(luke8 luke8.cpp)
