CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(knowit)

SET (CMAKE_CXX_STANDARD 14)

ADD_EXECUTABLE(luke1 luke1.cpp)
ADD_EXECUTABLE(luke2 luke2.cpp)
ADD_EXECUTABLE(luke3 luke3.cpp)
ADD_EXECUTABLE(luke4 luke4.cpp)
ADD_EXECUTABLE(luke5 luke5.cpp)
ADD_EXECUTABLE(luke6 luke6.cpp)
ADD_EXECUTABLE(luke7 luke7.cpp)
ADD_EXECUTABLE(luke8 luke8.cpp)
ADD_EXECUTABLE(luke9 luke9.cpp)
ADD_EXECUTABLE(luke10 luke10.cpp)
ADD_EXECUTABLE(luke11 luke11.cpp)
ADD_EXECUTABLE(luke12 luke12.cpp)
ADD_EXECUTABLE(luke13 luke13.cpp)
ADD_EXECUTABLE(luke14 luke14.cpp)
ADD_EXECUTABLE(luke15 luke15.cpp)
ADD_EXECUTABLE(luke16 luke16.cpp)
ADD_EXECUTABLE(luke17 luke17.cpp)
ADD_EXECUTABLE(luke18 luke18.cpp)
ADD_EXECUTABLE(luke19 luke19.cpp)
ADD_EXECUTABLE(luke20 luke20.cpp)
ADD_EXECUTABLE(luke21 luke21.cpp)
ADD_EXECUTABLE(luke22 luke22.cpp)
